tests/baselines/reference/slashBeforeVariableDeclaration1.errors.txt
tests/cases/compiler/slashBeforeVariableDeclaration1.ts(1,1): error TS1127: Invalid character.


==== tests/cases/compiler/slashBeforeVariableDeclaration1.ts (1 errors) ====
    \ declare var v;
    
!!! error TS1127: Invalid character.